Fix for OS X drag and drop.  It didn't like us setting the z-index on dnd-background-outer to -1.  That's fine because it will be behind the other div anyway, it's only the inner one's we need to set.
git-svn-id: https://svn.participatoryculture.org/svn/dtv/trunk@2849 bce20531-a64c-4166-8316-56baf4a01729

Original sha1: bd56db768481aac810f0ddcd0eb066546a48b663

--- a/tv/resources/css/style.css
+++ b/tv/resources/css/style.css
@@ -135,7 +135,6 @@ a.feeditem img.icon {
 .dnd-background-inner1, .dnd-background-inner2  {
     position: absolute;
     height: 22px;
-    z-index: -1;
 }
 
 /* DND Effects.  There is some nasty CSS stuff going on.  
@@ -185,7 +184,6 @@ a.feeditem img.icon {
 /* DND Folder highlight effects */
 .playlist-folder.drag-highlight.playlist.dnd-background-outer, .channel-folder.drag-highlight.channel.dnd-background-outer, .playlist.drag-highlight.downloadeditem.dnd-background-outer {
     background: url(../images/dnd-highlight-left.png) top left no-repeat;
-    z-index: -1;
 }
 
 .playlist-folder.drag-highlight.playlist .dnd-background-inner1, .channel-folder.drag-highlight.channel .dnd-background-inner1, .playlist.drag-highlight.downloadeditem .dnd-background-inner1 {
